# orca

./: .gitignore  Dockerfile  docker-compose.yaml  generate_grpc.py  pyproject.toml  readme.md  requirements.txt  starter.sh
.github/workflows/: cicd.yaml
cerebro/: Dockerfile  __init__.py  requirements.dev.txt
orca/: __init__.py  py_event_server.py
orca/models/: __init__.py
orca/utils/: __init__.py
orca_task_server/: __init__.py
orca_tools/: py_event_server.py  setup.py
orca_tools/models/: __init__.py
orca_tools/protos/: __init__.py
orca_tools/redis_orca/: __init__.py
orca_tools/scripts/: run_task.py  start_server.sh
orca_tools/task_server_utils/: __init__.py
protos/: orca.proto
scripts/: format.sh  run_task.py
task_server/: Dockerfile  __init__.py  requirements.txt
task_server_a/: Dockerfile  __init__.py
task_server_b/: Dockerfile  __init__.py  requirements.dev.txt
task_servers/: Dockerfile  requirements.dev.txt  requirements.txt
task_servers/task_server_letters/: __init__.py
task_servers/task_server_nums/: __init__.py
tests/: run__test.py  utils.py
